fix(cta-block): fix medium breakpoint layout and spacing (#7398)
### Related Ticket(s)

DDS issue: https://github.com/carbon-design-system/carbon-for-ibm-dotcom/issues/7176
HC JIRA Ticket: https://jsw.ibm.com/browse/HC-2234

### Description

This PR fixes the medium breakpoint grid columns count and related spacing. It also removes a now-unneeded SCSS file.

### Testing Instructions

- Visit the `CTA Block` component 
  - Default: `?path=/story/components-cta-block--default`
  - With content items: `?path=/story/components-cta-block--with-content-items`
  - With link list: `?path=/story/components-cta-block--with-link-list`
- Check the layout and spacing at all breakpoints to make sure the component has the correct column count and spacing.

--- a/packages/web-components/.storybook/container.scss
+++ b/packages/web-components/.storybook/container.scss
@@ -90,6 +90,7 @@ html {
 .dds-ce-demo-devenv--simple-grid--content-section,
 .dds-ce-demo-devenv--simple-grid--content-block-cards,
 .dds-ce-demo-devenv--simple-grid--logo-grid,
+.dds-ce-demo-devenv--simple-grid--cta-block,
 .dds-ce-demo-devenv--simple-grid--card-in-card,
 .dds-ce-demo-devenv--simple-grid--content-group-banner {
   > * {
@@ -118,6 +119,7 @@ html {
   .dds-ce-demo-devenv--simple-grid--content-section,
   .dds-ce-demo-devenv--simple-grid--content-block-cards,
   .dds-ce-demo-devenv--simple-grid--logo-grid,
+  .dds-ce-demo-devenv--simple-grid--cta-block,
   .dds-ce-demo-devenv--simple-grid--card-in-card {
     > * {
       grid-column: 1 / span 8;
@@ -127,7 +129,8 @@ html {
 
 @include carbon--breakpoint('lg') {
   .dds-ce-demo-devenv--simple-grid--callout > *,
-  .dds-ce-demo-devenv--simple-grid--card-in-card > * {
+  .dds-ce-demo-devenv--simple-grid--card-in-card > *,
+  .dds-ce-demo-devenv--simple-grid--cta-block > * {
     grid-column: 5 / span 12;
   }
 
